// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderWithPage homepage 1`] = `
Array [
  <header
    className="header"
    role="banner"
  >
    <a
      className="header__skip-link"
      href="#app"
      tabIndex={1}
    >
      Skip to main content
    </a>
    <div
      className="header__top"
    >
      <span
        className="header__logo-link"
      >
        <div
          className="header__logo-image-container"
        >
          <img
            alt="MyTake.org | Fundamentals, in context."
            className="header__logo-image"
            height="100"
            src="/assets/permanent/square-wheat-482248dddd.png"
            width="100"
          />
        </div>
        <em
          className="header__logo-title"
        >
          <span
            className="header__logo--mytake"
          >
            MyTake
          </span>
          <span
            className="header__logo--org"
          >
            .org
          </span>
        </em>
      </span>
      <UserNav />
    </div>
  </header>,
  <Drawer
    activeTab="How to use this"
    isExpanded={false}
  />,
]
`;

exports[`HeaderWithPage other pages 1`] = `
Array [
  <header
    className="header"
    role="banner"
  >
    <a
      className="header__skip-link"
      href="#app"
      tabIndex={1}
    >
      Skip to main content
    </a>
    <div
      className="header__top"
    >
      <span
        className="header__logo-link"
        onClick={[Function]}
      >
        <div
          className="header__logo-image-container"
        >
          <img
            alt="MyTake.org | Fundamentals, in context."
            className="header__logo-image"
            height="100"
            src="/assets/permanent/square-wheat-482248dddd.png"
            width="100"
          />
        </div>
        <em
          className="header__logo-title"
        >
          <span
            className="header__logo--mytake"
          >
            MyTake
          </span>
          <span
            className="header__logo--org"
          >
            .org
          </span>
        </em>
        <span
          className="header__moreinfo-link"
        >
          More info
        </span>
      </span>
      <Tabs
        activeTab="How to use this"
        className="header__tabs"
        onTabClick={[Function]}
      />
      <UserNav />
    </div>
  </header>,
  <Drawer
    activeTab="How to use this"
    isExpanded={false}
  />,
]
`;

exports[`HeaderWithPage search page 1`] = `
Array [
  <header
    className="header header--search"
    role="banner"
  >
    <a
      className="header__skip-link"
      href="#app"
      tabIndex={1}
    >
      Skip to main content
    </a>
    <div
      className="header__top"
    >
      <span
        className="header__logo-link"
      >
        <div
          className="header__logo-image-container"
        >
          <img
            alt="MyTake.org | Fundamentals, in context."
            className="header__logo-image"
            height="100"
            src="/assets/permanent/square-wheat-482248dddd.png"
            width="100"
          />
        </div>
        <em
          className="header__logo-title"
        >
          <span
            className="header__logo--mytake"
          >
            MyTake
          </span>
          <span
            className="header__logo--org"
          >
            .org
          </span>
        </em>
      </span>
      <div
        className="header__searchbar"
      >
        <SearchBar
          classModifier="search"
          initialSearchQuery="anything"
        />
      </div>
      <UserNav />
    </div>
  </header>,
  <Drawer
    activeTab="How to use this"
    isExpanded={false}
  />,
]
`;
